Modifications w.r.t. front-end completed

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -7,7 +7,7 @@
 		<div class="container">
 			<h1>Sites</h1>
 			<ul class="list-group">
-				<li class="list-group-item"><a href="first">Demo Site</a></li>
+				<li class="list-group-item"><a href="/sites/1">Demo Site</a></li>
 				<li class="list-group-item"><a href="/sites/2">ABC Site</a></li>
 				<li class="list-group-item"><a href="/sites/3">XYZ Site</a></li>
 			</ul>
