--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,6 +6,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <link rel="stylesheet" 
         href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" 
+        href="styles/herokuapp.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
@@ -14,12 +16,10 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="active" role="presentation" >
-                        <a href="/sites">Sites</a>
-                        <!--<a href="#">Sites</a>-->
+                    <a href="/sites">Sites</a>
                 </li>
                 <li role="presentation" >
-                        <a href="/summary">Summary</a>
-                        <!--<a href="#">Summary</a>-->
+                    <a href="/summary">Summary</a>
                 </li>
             </ul>
         </div>
