--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -11,7 +11,22 @@
 				<li class="list-group-item"><a href="/sites/2">ABC Site</a></li>
 				<li class="list-group-item"><a href="/sites/3">XYZ Site</a></li>
 			</ul>
-		</div>	
+		</div>
+		<div>
+			<p> {{name}} </p>
+			<p> {{numbers}} </p>
+			<!--<p> {{date_value}} </p>
+			<ul>
+				{% for date in date_value %}
+					<li> {{date.date_value}} </li>
+				{% endfor%}
+			</ul>-->
+			<ul>
+				{% for num in numbers %}
+					<li> {{num}} </li>
+				{% endfor%}
+			</ul>
+		</div>
     {% endblock %}
 </body>
 </html>
