--- a/app/templates/app/sites/1.html
+++ b/app/templates/app/sites/1.html
@@ -5,32 +5,22 @@
 <body>
 	{% block body %}
         <div class="container">
-            <h1>Site Details - Demo Site</h1>
+            <h1>Site Details - {{site_name}}</h1>
 
             <table class="table">
                 <thead>
                     <tr><td><strong>Date</strong></td>
                     <td><strong>A Value</strong></td><td><strong>B Value</strong></td></tr>
                 </thead>
-                
+                             
+                {% for site in sites %}
                     <tr>
-                        <td>Feb. 1, 2015</td>
-                        <td>12.00</td>
-                        <td>16.00</td>
+                        <td>{{site.date_value}}</td>
+                        <td>{{site.A_value}}</td>
+                        <td>{{site.B_value}}</td>
                     </tr>
-                
-                    <tr>
-                        <td>Feb. 3, 2015</td>
-                        <td>20.00</td>
-                        <td>100.00</td>
-                    </tr>
-                
-                    <tr>
-                        <td>Feb. 10, 2015</td>
-                        <td>20.00</td>
-                        <td>url(r'^sites/(?P<site_id>\d+)/$', views.first),</td>
-                    </tr>
-                
+                {% endfor%}
+
             </table>
         </div>	
     {% endblock %}
