--- a/app/templates/app/sites/2.html
+++ b/app/templates/app/sites/2.html
@@ -5,22 +5,25 @@
 <body>
 	{% block body %}
     <div class="container">
-        <h1>Site Details - ABC Site</h1>
+        <h1>Site Details - {{site_name}}</h1>
 
         <table class="table">
             <thead>
                 <tr><td><strong>Date</strong></td>
                 <td><strong>A Value</strong></td><td><strong>B Value</strong></td></tr>
             </thead>
-            
+
+            {% for site in sites %}
                 <tr>
-                    <td>Feb. 3, 2015</td>
-                    <td>5.00</td>
-                    <td>15.00</td>
+                    <td>{{site.date_value}}</td>
+                    <td>{{site.A_value}}</td>
+                    <td>{{site.B_value}}</td>
                 </tr>
-            
+            {% endfor%}
+  
         </table>
     </div>
+
     {% endblock %}
 </body>
 </html>
