--- a/app/templates/app/sites/3.html
+++ b/app/templates/app/sites/3.html
@@ -5,7 +5,7 @@
 <body>
 	{% block body %}
     <div class="container">
-        <h1>Site Details - XYZ Site</h1>
+        <h1>Site Details - {{site_name}}</h1>
 
         <table class="table">
             <thead>
@@ -13,17 +13,13 @@
                 <td><strong>A Value</strong></td><td><strong>B Value</strong></td></tr>
             </thead>
             
+            {% for site in sites %}
                 <tr>
-                    <td>Feb. 15, 2015</td>
-                    <td>5.00</td>
-                    <td>15.00</td>
+                    <td>{{site.date_value}}</td>
+                    <td>{{site.A_value}}</td>
+                    <td>{{site.B_value}}</td>
                 </tr>
-            
-                <tr>
-                    <td>Feb. 28, 2015</td>
-                    <td>5.00</td>
-                    <td>15.00</td>
-                </tr>
+            {% endfor%}
             
         </table>
     </div>	
