--- a/app/templates/app/summary.html
+++ b/app/templates/app/summary.html
@@ -7,8 +7,8 @@
         <div class="container">
             <h1>Summary</h1>
 
-            <a href="#"><button type="button" class="btn btn-primary active">Sum</button></a>
-            <a href="#"><button type="button" class="btn btn-primary">Average</button></a>
+            <a href="/summary"><button type="button" class="btn btn-primary active">Sum</button></a>
+            <a href="/summary-average"><button type="button" class="btn btn-primary">Average</button></a>
 
             <table class="table">
                 <thead>
