--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <nav class="navbar navbar-default navbar-static-top">
-        <div id="navbar" class="navbar-collapse collapse">
+        <div id="navbar" class="navbar-header">
             <ul class="nav navbar-nav">
                 <li class="active" role="presentation" >
                     <a href="/sites">Sites</a>
