--- a/app/templates/app/summary.html
+++ b/app/templates/app/summary.html
@@ -18,23 +18,13 @@
                     </tr>
                 </thead>
                 
+                {% for site in sites %}
                     <tr>
-                        <td>Demo Site</td>
-                        <td>52.00</td>
-                        <td>196.00</td>
+                        <td>{{site.site_name}}</td>
+                        <td>{{site.A_value}}</td>
+                        <td>{{site.B_value}}</td>
                     </tr>
-                
-                    <tr>
-                        <td>ABC Site</td>
-                        <td>5.00</td>
-                        <td>15.00</td>
-                    </tr>
-                
-                    <tr>
-                        <td>XYZ Site</td>
-                        <td>10.00</td>
-                        <td>30.00</td>
-                    </tr>
+                {% endfor%}
                 
             </table>
         </div>
